# cookiecutter-python-notebook

./: README.md  README.rst  cookiecutter.json  requirements.txt
.github/workflows/: cookiecutter-test.yml  test-build.yml
hooks/: post_gen_project.py  post_gen_project.sh
tests/: complex_config.yaml  default_config.yaml
{{ cookiecutter.folder_name }}/: .gitattributes  pyproject.toml  {% if cookiecutter.readme_format== 'md' %}README.md{% endif %}  {% if cookiecutter.readme_format== 'rst' %}README.rst{% endif %}
{{ cookiecutter.folder_name }}/notebooks/: starter.ipynb
{{ cookiecutter.folder_name }}/{{ cookiecutter.import_name }}/starter/: starter.py
