[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

description = "{{ cookiecutter.description }}"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "{{ cookiecutter.repo_name }}"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "{{ cookiecutter.import_name }}*",]
namespaces = false

[[project.authors]]
name = "{{ cookiecutter.author_name }}"

{% if cookiecutter.simple == 'no' %}
[project.license]
file = "LICENSE"
{% endif %}

[project.scripts]
"{{ cookiecutter.repo_name }}" = "{{ cookiecutter.import_name }}.bin.main:main"

[tool.setuptools_scm]
write_to = "{{ cookiecutter.import_name }}/_version.py"

[tool.setuptools.dynamic.readme]
{% if cookiecutter.readme_format == 'rst' %}
file = "README.rst"
{% endif %}
{% if cookiecutter.readme_format == 'md' %}
file = "README.md"
{% endif %}

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

{% if cookiecutter.simple == 'no' %}
[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"
{% endif %}

[tool.pytest.ini_options]
addopts = "--cov=."

